# ai-coding-supervisor

./: .gitignore  .gitmodules  CLOUDFLARE_TESTING.md  DEPLOYMENT.md  Dockerfile  README.md  RETRY_IMPROVEMENTS.md  RETRY_MODE.md  TESTING.md  __init__.py  claude_engineer.py  debug_tcp.py  demo.py  deploy_remote.sh  developer_pty.py  docker-compose.yml  factorial.py  hello_test.py  hello_world.py  kick-claude.py  mcp-server.service  nginx.conf  pyproject.toml  pytest.ini  requirements.txt  run_integration_tests.py  run_mcp_server.py  setup.py  setup_localhost.sh  supervisor.py  supervisor_sdk.py  tasks.md  team_coding_tool.py  test_claude_code_errors.py  test_e2e_retry_final.py  test_e2e_retry_simple.py  test_enhanced_retry_features.py  test_execute_task.py  test_quick_tunnel.py  test_retry_functionality.py  (+7 more)
.github/workflows/: docker.yml  e2e-test.yml  smoke-test.yml  test.yml
.windsurf/rules/: main.md  python.md
agents/: __init__.py  agent_registry.py  base_agent.py  claude_code_agent.py  engineering_manager.py
cli/: __init__.py  interface.py  main_cli.py
communication/: __init__.py
deploy/cloudflare/: README.md  setup_tunnel.sh
deploy/hetzner/: provision_vm.sh
deploy/k8s/: run-smoke-test.sh
deploy/k8s/chart/: Chart.yaml  values.yaml
deploy/k8s/chart/templates/: deployment.yaml  ingress.yaml
deploy/local/: run_local.sh
mcp/: README.md  __init__.py  base_mcp_server.py  engineering_manager_server.py  health_check.py  http_wrapper.py  software_engineer_server.py  stdio_server.py  stdio_server_sync.py  test_mcp_server.py  vibeteam_mcp_server.py
tasks/: __init__.py
tests/: __init__.py  test_base_agent.py  test_cloudflare_setup.py  test_factorial.py  test_hello_test.py  test_hello_world.py  test_integration_cli.py  test_integration_manager.py  test_integration_performance.py  test_logging.py  test_utils.py  test_vibecode_integration.py  test_vibecode_tasks.py  test_vibeteam_tasks.py
tests/mcp/: __init__.py  conftest.py  test_base_mcp_server.py  test_engineering_manager_server.py  test_integration.py  test_mcp_command.py  test_software_engineer_server.py  test_vibeteam_mcp_server.py
tests/tcp/: test_tcp_server.py
tests/tunnel/: test_cloudflare_tunnel.py  test_integrated_tunnel.py  test_minimal_tunnel.py
utils/: __init__.py  config.py  logging.py
